--- a/lib/drop_alley_web/templates/product/product_index.html.eex
+++ b/lib/drop_alley_web/templates/product/product_index.html.eex
@@ -8,7 +8,7 @@
       </button>
       <div class="collapse d-md-block" id="collapseFilter">
         <div class="filter-sidebar mt-3 mt-md-0">
-          <div class="title"><span>Filtros</span></div>
+          <div class="title"><span>Filters</span></div>
           <ul>
               <%= for filter <- assigns.filter.conditions do %>
                 <li><%= filter.column |> String.capitalize %>: <%= filter.comparator %> <%= filter.value %> <a href="#" class="remove-filter" data-column=<%= filter.column %> data-val = <%= filter.value %> data-comp = <%= filter.comparator |> String.replace(" ", "_") %> ><i class="material-icons md-1">close</i></a></li>
@@ -16,7 +16,7 @@
           </ul>
         </div>
         <div class="filter-sidebar">
-          <div class="title"><span>Categorías</span></div>
+          <div class="title"><span>Categories</span></div>
           <div class="list-group list-group-collapse list-group-sm list-group-tree" id="list-group-men" data-children=".sub-men">
             <%= for c <- assigns.category_group do %>
             <div class="list-group-collapse sub-men">
@@ -33,7 +33,7 @@
           </div>
         </div>
         <div class="filter-sidebar">
-          <div class="title"><span>Marca</span></div>
+          <div class="title"><span>Brand</span></div>
           <%= for d <- assigns.brands do %>
             <div class="custom-control custom-checkbox">
             <input type="checkbox" class="custom-control-input brand-filter" data-val= <%= d %> id="filter<%= d %>">
@@ -45,7 +45,7 @@
         <div class="row">
           <div class="col-12 col-sm-6 col-md-12">
             <div class="filter-sidebar">
-              <div class="title"><span>Precios</span></div>
+              <div class="title"><span>Price</span></div>
               <div class="input-group input-group-sm mb-3">
                 <div class="input-group-prepend">
                   <span class="input-group-text">Min : €</span>
@@ -68,7 +68,18 @@
     <!-- /Filter Widget -->
 
     <div class="col-lg-9 col-md-8">
-      <div class="title" style="text-align:center; font-size:17px;"><span><strong>Fase 1:</strong> Recibe tu pedido en casa. Entrega en dos 2hrs (Opcional) <strong>Fase 2:</strong> Pruebe el producto <strong>Fase 3:</strong> Compra solo si te gusta</span></div>
+      <div class="title" style="text-align:center; font-size:17px;">
+        <!--
+        <span>
+          <strong>Phase 1:</strong> 
+          Recibe tu pedido en casa. Entrega en dos 2hrs (Opcional) 
+          <strong>Phase 2:</strong> 
+          Pruebe el producto 
+          <strong>Phase 3:</strong> 
+          Compra solo si te gusta
+        </span>
+        -->
+      </div>
 
       <!-- Sorting Bar -->
       <div class="row mb-3">
